<resources>
    <string name="app_name">Elhawary Center</string>
    <string name="menu_delete">Delete</string>
    <string name="delete_all_data">Delete All</string>
    <string name="ho_inc">H&amp;O</string>
    <string name="iv_desc">miniPhoto</string>
    <string name="age">Age: </string>
    <string name="bt_viewMore">View More</string>
    <string name="fab_desc">add patient data</string>
    <string name="add_bottom_sheet_label">New Case</string>
    <string name="name">Name: </string>
    <string name="case_type">Case type: </string>
    <string name="sex">Gender</string>
    <string name="total_price">Total Price: </string>
    <string name="amount_paid">Paid: </string>
    <string name="money_paid">Paid money: </string>
    <string name="amount_remaining">Remaining money: </string>
    <string name="total_sessions">Total sessions: </string>
    <string name="taken_sessions">Taken sessions: </string>
    <string name="remaining_sessions">Remaining sessions: </string>
    <string name="notes">Notes: </string>
    <string name="btn_save">Save</string>
    <string name="list_fragment_label">Cases</string>
    <string name="diagnosis">Diagnosis: </string>
    <string name="fragment_details">Details</string>
    <string name="alert_dialogue_title">Delete All Data</string>
    <string name="alert_dialogue_message">Are you sure you want to delete All Cases!!</string>
    <string name="absolute_passkey">Hussein1998</string>
    <string name="key_hint">Enter the Absolute Key</string>
    <string name="confirm">Confirm</string>
    <string name="delete_confirmation">All data has been deleted!</string>
    <string name="delete_failed">Wrong password :)</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_deletion">Fine, you will keep them</string>
    <string name="place_holder">Soon</string>
    <string name="add_rejected">Please check if entered data is correct</string>
    <string name="exception_toast">Please make sure yoy entered data correctly</string>
    <string name="update_bottom_sheet_label">Update data</string>
    <string name="btn_update">Update</string>
    <string name="tv_case_history">History</string>
    <string name="avatar">Avatar</string>
    <string name="gender">Gender: </string>
    <string name="image_button_desc">Add To total price</string>
    <string name="edit">Edit notes</string>
    <string name="saved_toast">Saved Successfully</string>
    <string name="date_of_admission">Date of admission</string>
    <string name="updated_toast">Data Updated!</string>
    <string name="ll_financials">Financials</string>
    <string name="search">Search</string>
</resources>