<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/listFragment"
        android:name="com.ho.elhawarycenter.fragments.ListFragment"
        android:label="@string/list_fragment_label"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
        <action
            android:id="@+id/action_listFragment_to_addBottomSheetFragment"
            app:destination="@id/addBottomSheetFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.ho.elhawarycenter.fragments.DetailsFragment"
        android:label="@string/fragment_details"
        tools:layout="@layout/fragment_details" >
        <action
            android:id="@+id/action_detailsFragment_to_updateBottomSheetFragment"
            app:destination="@id/updateBottomSheetFragment" />
        <argument
            android:name="CurrentCase"
            app:argType="com.ho.elhawarycenter.model.Case" />
        <action
            android:id="@+id/action_detailsFragment_to_listFragment"
            app:destination="@id/listFragment" />
    </fragment>
    <dialog
        android:id="@+id/addBottomSheetFragment"
        android:name="com.ho.elhawarycenter.fragments.AddBottomSheetFragment"
        android:label="@string/add_bottom_sheet_label" />
    <dialog
        android:id="@+id/updateBottomSheetFragment"
        android:name="com.ho.elhawarycenter.fragments.UpdateBottomSheetFragment"
        android:label="@string/update_bottom_sheet_label" >
    </dialog>
</navigation>